--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,23 +90,31 @@ p {
     background-color: #2589bd;
 }
 /*combined benefit brand, benefit lead,and benefit cost*/
-.benefit-lead,.benefit-brand,.benefit-cost {
+.benefit-lead, 
+.benefit-brand,
+.benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 /*combined benefit lead head , benefit brand head , and benefit cost head*/
-.benefit-lead h3,.benefit-brand h3,.benefit-cost h3 {
+.benefit-lead h3,
+.benefit-brand h3,
+.benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 /*combined benefit lead img , benefit brand img, and benefit cost img*/
-.benefit-lead img,.benefit-brand img,.benefit-cost img {
+.benefit-lead img,
+.benefit-brand img,
+.benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 /*combined search engine optimization, online reputation management,and social media marketing*/
-.search-engine-optimization,.online-reputation-management,.social-media-marketing {
+.search-engine-optimization,
+.online-reputation-management,
+.social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -115,11 +123,15 @@ p {
     color: #ffffff;
 }
 /*combined the search engine image,online reputation management image, and social media marakerting image */
-.search-engine-optimization img,.online-reputation-management img,.social-media-marketing img{
+.search-engine-optimization img,
+.online-reputation-management img,
+.social-media-marketing img{
     max-height: 200px;
 }
 /*combined search engine optimization head, online reputation managment head, and social media marketing head*/
-.search-engine-optimization h2,.online-reputation-management h2,.social-media-marketing h2 {
+.search-engine-optimization h2,
+.online-reputation-management h2,
+.social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
